@@ -1,3 +1,4 @@
+	- Implemented rocket (LP: #257550)
 	- Added rotating mill (LP: #242120)
 0.2.10
 	- Added assistant which can download the shareware episode
